src/objects/Apttus_Config2__LineItem__c.object
<CustomObject>
    <fields>
        <fullName>APTS_BundleOptionIsHierarchy__c</fullName>
        <formula>if( TEXT( Apttus_Config2__LineType__c) == &quot;Product/Service&quot;, Apttus_Config2__ProductId__r.APTS_LP_Is_Hierarchy__c ,
if( TEXT( Apttus_Config2__LineType__c) == &quot;Option&quot;,  Apttus_Config2__OptionId__r.APTS_LP_Is_Hierarchy__c , FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_BusinessObjectStatus__c</fullName>
        <description>This formula will return the status of Business Object - i.e Agreement status or Proposal Approval Stage - It is being used in Line Item delete trigger where we are restricting user to delete line item if Business object is in certain status.</description>
        <formula>IF( ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__BusinessObjectType__c, &quot;Agreement&quot;),  TEXT(Apttus_Config2__ConfigurationId__r.Apttus_CMConfig__AgreementId__r.Apttus__Status__c), IF(ISPICKVAL(Apttus_Config2__ConfigurationId__r.Apttus_Config2__BusinessObjectType__c, &quot;Proposal&quot;),  TEXT(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Apttus_Proposal__Approval_Stage__c), NULL))</formula>
        <label>Business Object Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Critical_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Critical Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Quantity__c</fullName>
        <description>The product or service quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Percentage__c</fullName>
        <description>Field to specify the percentage of discount to be applied to the line item when selected discount type is either &quot;Substitute Discount&quot; or &quot;Additional Discount&quot;.</description>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <description>Field for user to select appropriate type of discount in line item.</description>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Net Price Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitute Discount</fullName>
            </picklistValues>
	    <picklistValues>
		<fullName>--None--</fullName>
	    </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_Level__c</fullName>
        <formula>Apttus_Config2__ProductId__r.APTS_GTV_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTV Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Global_Product_Code__c</fullName>
        <description>Field to hold the Product ID (Code) fetched from global product associated with selected local product in the record.</description>
        <formula>IF(Apttus_Config2__ProductId__r.APTS_LP_Is_Hierarchy__c, &apos;&apos;,  Apttus_Config2__ProductId__r.APTS_Global_Product_ID__r.APTS_Product_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_3_Code__c</fullName>
        <description>Field to capture Level 3 Hierarchy code entered by user.</description>
        <label>Hierarchy Level 3 Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Line_Priced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Line Priced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Hierarchy_Name__c</fullName>
        <description>Formula field to display the name of the hierarchy product.</description>
        <formula>IF( Apttus_Config2__ProductId__r.APTS_LP_Is_Hierarchy__c,  Apttus_Config2__ProductId__r.Name , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Product_Code__c</fullName>
        <description>Field to hold the value of Product ID fetched from selected local product in the record.</description>
        <formula>IF(Apttus_Config2__ProductId__r.APTS_LP_Is_Hierarchy__c, &apos;&apos;,  Apttus_Config2__ProductId__r.APTS_Product_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Product_Description__c</fullName>
        <description>Formula field to fetch the name/description of the selected local product.</description>
        <formula>IF(Apttus_Config2__ProductId__r.APTS_LP_Is_Hierarchy__c, &apos;&apos;,  Apttus_Config2__ProductId__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Product_Hierarchy__c</fullName>
        <description>Formula field to hold the value of the Product Hierarchy code fetched from selected product in the line item.</description>
        <formula>Apttus_Config2__ProductId__r.APTS_Hierarchy_Level_3_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Hierarchy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Placeholder field to hold the value of Standard Discount fetched from SAP.</description>
        <label>Standard Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Net__c</fullName>
        <label>Std. Net</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Total_Standard_Price__c</fullName>
        <description>Formula for this field :  Gross (Base) Price * Quantity</description>
        <formula>APTS_LP_Standard_Net__c *  Apttus_Config2__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Standard Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Unit_Of_Measure__c</fullName>
        <description>Placeholder field to hold the value of Delivery Unit fetched from SAP.</description>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Unit_Of_Price__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <description>Placeholder field to hold the value of Price Unit fetched from SAP.</description>
        <label>Unit Of Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Item_Discount__c</fullName>
        <formula>IF( Apttus_Config2__ProductId__r.APTS_LP_Is_Hierarchy__c,APTS_Discount_Percentage__c,(Apttus_Config2__NetAdjustmentPercent__c * -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Discount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Number_Custom__c</fullName>
        <label>#</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment_Percentage__c</fullName>
        <formula>/*if( Apttus_Config2__NetAdjustmentPercent__c &lt; 0 , ABS(Apttus_Config2__NetAdjustmentPercent__c ), if(Apttus_Config2__NetAdjustmentPercent__c &gt; 0,Apttus_Config2__NetAdjustmentPercent__c + 1,0))*/


 IF( ISPICKVAL( APTS_Discount_Type__c , &apos;Substitute Discount&apos;) , 
 APTS_Discount_Percentage__c 
,IF(ISPICKVAL( APTS_Discount_Type__c , &apos;Additional Discount&apos;),
APTS_Discount_Percentage__c +  APTS_LP_Standard_Discount__c , 
 IF(ISPICKVAL( APTS_Discount_Type__c , &apos;Net Price Discount&apos;),
  Apttus_Config2__NetAdjustmentPercent__c * -1, NULL)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adj. (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Override__c</fullName>
        <description>Field to hold the new price value (to override existing price value) for the line item when selected discount type is &quot;Net Price Discount&quot;.</description>
        <label>Net Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Original_Created_By__c</fullName>
        <label>Original Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Original_Created_On__c</fullName>
        <label>Original Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Owner__c</fullName>
        <label>Original Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SPA_Line_Item_Number__c</fullName>
        <label>SPA Line Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Quote_Price__c</fullName>
        <description>Formula field to contain the total quote price which is multiplication of net price and quantity.</description>
        <formula>Apttus_Config2__NetPrice__c * Apttus_Config2__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quote Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>   
    <fields>
        <fullName>APTS_Unit_Net_Price__c</fullName>
        <description>Formula field to hold the Net Price for Unit quantity.
Used for template as well.</description>
        <formula>Apttus_Config2__NetPrice__c  /  Apttus_Config2__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_new_product_code__c</fullName>
        <formula>If( APTS_BundleOptionIsHierarchy__c = True, APTS_LP_Hierarchy_Name__c &amp; BR() &amp; &apos;Hierarchy Code:&apos; &amp; CASE( Apttus_Config2__ProductId__r.APTS_Hierarchy_Level__c ,2, Apttus_Config2__ProductId__r.APTS_LP_Product_Hierarchy__c,3,Apttus_Config2__ProductId__r.APTS_Hierarchy_Level_3_Code__c,4, Apttus_Config2__ProductId__r.APTS_Hierarchy_Level_4_Code__c,NULL) , APTS_LP_Product_Description__c &amp; BR() &amp; &apos;Hierarchy Code:&apos;&amp; Apttus_Config2__ProductId__r.APTS_Hierarchy_Level_3_Code__c &amp; BR() &amp; &apos;Local Code:&apos; &amp; APTS_LP_Product_Code__c)</formula>
        <label>Product/Hierarchy Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The manual price adjustment type</description>
        <label>Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>% Discount Off List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Uplift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Markup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Price Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Factor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Discounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GTV_Level__c</fullName>
        <label>GTV Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>APTS_Additional_and_Net_Discounts_availble</fullName>
        <active>true</active>
        <description>Only Additional and Net discounts availble</description>
        <label>Additional and Net Discounts availble</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_Additional_and_Substitute_Discounts_availble</fullName>
        <active>true</active>
        <description>Only Additional and Substitute Discounts are availble</description>
        <label>Additional and Substitute Discounts availble</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_All_Discounts_Available</fullName>
        <active>true</active>
        <description>All discounts available (as offered by CPQ)</description>
        <label>All Discounts Available</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_No_Adjustment_Available</fullName>
        <active>true</active>
        <label>No Adjustment Available</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_Only_Additional_Discount</fullName>
        <active>true</active>
        <description>Only Additional Discount type is available</description>
        <label>Only Additional Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_Only_Additional_Net_and_Substitute_Discounts_availble</fullName>
        <active>true</active>
        <label>Only Additional,Net and Substitute Discounts availble</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_Only_Net_Discount_Available</fullName>
        <active>true</active>
        <label>Only Net Discount Available</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_Only_Net_and_Substitute_Discounts</fullName>
        <active>true</active>
        <description>Only net and substitute discounts availble</description>
        <label>Only Net and Substitute Discounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_Only_Substitute_Discount</fullName>
        <active>true</active>
        <description>Only Substitute Discount type is available</description>
        <label>Only Substitute Discount</label>
    </recordTypes>
</CustomObject>